---
source: squirrel_lang/src/vm/compiler.rs
expression: actual_code
---
- code:
    - Load:
        data:
          FunIdx: 0
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 0
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 1
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 2
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 1
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 4
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 3
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 8
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 4
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 8
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Store:
        data:
          Reg: 6
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 5
        ctx:
          start: Start
          end: End
    - Arith:
        data:
          op: Add
          reg: 6
        ctx:
          lhs_span:
            start: Start
            end: End
          op_span:
            start: Start
            end: End
          rhs_span:
            start: Start
            end: End
    - Store:
        data:
          Reg: 5
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 4
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 10
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 6
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 9
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 14
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 16
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 7
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 15
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 15
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 16
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Store:
        data:
          Reg: 13
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 13
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 14
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Store:
        data:
          Reg: 12
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 8
        ctx:
          start: Start
          end: End
    - Arith:
        data:
          op: Add
          reg: 12
        ctx:
          lhs_span:
            start: Start
            end: End
          op_span:
            start: Start
            end: End
          rhs_span:
            start: Start
            end: End
    - Store:
        data:
          Reg: 11
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 9
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 10
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 18
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 9
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 17
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 10
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 19
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 17
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 18
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Load:
        data:
          PrimType: EmptyTable
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 20
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 12
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 21
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 13
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 23
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 14
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 22
        ctx:
          start: Start
          end: End
    - Load:
        data:
          PrimType: EmptyTable
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 25
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 25
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 24
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 22
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 23
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Set:
        Setf:
          - - 20
            - true
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Reg: 20
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 11
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 28
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 15
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 27
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 16
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 29
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 27
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 28
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 31
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 17
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 30
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 18
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 33
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 19
        ctx:
          start: Start
          end: End
    - Arith:
        data:
          op: Add
          reg: 33
        ctx:
          lhs_span:
            start: Start
            end: End
          op_span:
            start: Start
            end: End
          rhs_span:
            start: Start
            end: End
    - Store:
        data:
          Reg: 32
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 30
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 31
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 35
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 20
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 34
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 39
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 21
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 41
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 22
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 40
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 40
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 41
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Store:
        data:
          Reg: 38
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 38
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 39
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Store:
        data:
          Reg: 37
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 23
        ctx:
          start: Start
          end: End
    - Arith:
        data:
          op: Add
          reg: 37
        ctx:
          lhs_span:
            start: Start
            end: End
          op_span:
            start: Start
            end: End
          rhs_span:
            start: Start
            end: End
    - Store:
        data:
          Reg: 36
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 34
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 35
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 43
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 24
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 42
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 25
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 44
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 42
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 43
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Ret:
        data: Void
        ctx:
          start: Start
          end: End
  block_offsets:
    - 0
  constants:
    - String: parent
    - String: print
    - String: "First, the root table\n"
    - String: print
    - String: getroottable
    - String: "\n"
    - String: print
    - String: parent
    - String: "\n"
    - String: print
    - String: "\n"
    - String: table
    - String: parent
    - String: parent
    - String: bindenv
    - String: print
    - String: "Now, a table with a parent function\n"
    - String: print
    - String: table
    - String: "\n"
    - String: print
    - String: table
    - String: parent
    - String: "\n"
    - String: print
    - String: "\n"
  is_varargs: true
  num_regs: 45
  num_params: 0
  locals:
    - NamedReg:
        - 0
        - vargv
  num_locals: 0
